retrieveUnpackaged/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>AHRC__c</fullName>
        <label>AHRC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>561</fullName>
                </value>
                <value>
                    <fullName>56A</fullName>
                </value>
                <value>
                    <fullName>56C</fullName>
                </value>
                <value>
                    <fullName>56D</fullName>
                </value>
                <value>
                    <fullName>56E</fullName>
                </value>
                <value>
                    <fullName>56F</fullName>
                </value>
                <value>
                    <fullName>56H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project_Code__c &amp; &quot; - &quot; &amp;  Project__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Task_Name__c</fullName>
        <formula>TEXT(Sub_Task_code__c) &amp; &quot; - &quot; &amp;  Sub_Task__c</formula>
        <label>Sub-Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Task__c</fullName>
        <label>Sub-Task</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Task_code__c</fullName>
        <label>Sub-Task Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <formula>TEXT(Task_code__c) &amp; &quot; - &quot; &amp;   Name</formula>
        <label>Task Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_code__c</fullName>
        <label>Task code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
                <value>
                    <fullName>e</fullName>
                </value>
                <value>
                    <fullName>f</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>h</fullName>
                </value>
                <value>
                    <fullName>i</fullName>
                </value>
                <value>
                    <fullName>j</fullName>
                </value>
                <value>
                    <fullName>k</fullName>
                </value>
                <value>
                    <fullName>l</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>n</fullName>
                </value>
                <value>
                    <fullName>o</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AHRC__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Sub_Task_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AHRC__c</field>
            <operation>equals</operation>
            <value>56C</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>